# tfl-bike-share-anomaly-detection

./: .gitignore  Cargo.toml  README.md
anomaly-detection/: Cargo.toml
anomaly-detection/src/: main.rs
insights/: Cargo.toml
insights/src/: main.rs
src/: main.rs
ui/: package-lock.json  package.json
ui/src/: journey.ts
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: Map.tsx
