[package]
name = "tfl-bike-share-anomaly-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
extended-isolation-forest = "0.2.3"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.124"
